<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_revu1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/red_dark"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/usernameInput"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/passwordInput"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/signupButton"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:src="@drawable/revulogo"
        android:contentDescription="@string/revu_logo"
        android:layout_marginTop="32dp"/>
</LinearLayout>

